# Project-Bulkly

./: .gitignore  README.md  SSTT Lead Sheet.xlsx  pyrightconfig.json
bulkly-platform/: .env.example  docker-compose.yml  vercel.json
bulkly-platform/backend/: Dockerfile  bulkly.db  pyproject.toml
bulkly-platform/backend/app/: main.py
bulkly-platform/backend/app/api/: deps.py
bulkly-platform/backend/app/api/v1/: ai.py  analytics.py  auth.py  campaigns.py  leads.py  messaging.py  users.py
bulkly-platform/backend/app/core/: config.py  database.py  security.py
bulkly-platform/backend/app/models/: __init__.py  campaign.py  lead.py  message.py  organization.py  user.py
bulkly-platform/backend/app/schemas/: __init__.py
bulkly-platform/backend/app/scripts/: seed_db.py
bulkly-platform/backend/app/services/: ai_service.py  channel_service.py
bulkly-platform/backend/app/workers/: message_worker.py
bulkly-platform/frontend/: package-lock.json  package.json
bulkly-platform/frontend/src/app/: layout.tsx  page.tsx
bulkly-platform/frontend/src/components/: AICopilot.tsx  LayoutWrapper.tsx  Sidebar.tsx  TopNav.tsx
whatsapp_bulk_sender/: README.md  create_test_excel.py  main.py  requirements.txt  sample_leads.xlsx
whatsapp_bulk_sender/core/: ai_reply_module.py  excel_reader.py  message_generator.py  platform_connectors.py  session_manager.py  whatsapp_sender.py
whatsapp_bulk_sender/data/: message_templates.json
whatsapp_bulk_sender/logs/: send_log.csv
whatsapp_bulk_sender/ui/: dashboard.py  lead_table.py  main_window.py  settings_panel.py
(+13 files in other folders)
