[project]
name = "bulkly-backend"
version = "3.5.0"
description = "Bulkly Enterprise Marketing Operating System Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.27",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.2",
    "celery>=5.3.6",
    "flower>=2.0.1",
    "httpx>=0.26.0",
    "aiofiles>=23.2.1",
    "google-generativeai>=0.5.0",
    "twilio>=8.13.0",
    "stripe>=8.4.0",
    "boto3>=1.34.51",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
    "faker>=24.0.0",
    "pytz>=2024.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
